# MDToWord

./: .gitignore  CLAUDE.md  README.md
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py  models.py  normalizer.py  pandoc_runner.py  reference.docx  settings.py
backend/tests/: test_convert_api.py  test_normalizer.py  test_pandoc_runner.py
backend/tests/fixtures/: sample_basic.md  sample_invalid_formula.md
docs/: release-checklist.md
docs/deployment/: render.md
docs/samples/: ai-output-sample.md
docs/superpowers/plans/: 2026-05-24-md-to-word-extension-implementation.md
docs/superpowers/specs/: 2026-05-24-md-to-word-extension-design.md
extension/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
extension/public/: manifest.json
extension/public/_locales/zh_CN/: messages.json
extension/src/: App.tsx  api.ts  background.ts  folders.ts  normalizer.ts  preview.tsx  storage.ts  styles.css  types.ts
